# DeepMReye

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  DEV.md  Dockerfile  Dockerfile_dev  MANIFEST.in  Makefile  Pipfile  README.md  conf.py  index.rst  overview.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  testnotebook.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codespell.yml  demo.yml  main.yml  package.yml  update_precommit_hooks.yml
.streamlit/: config.toml
archive/: hdf5_dataset.py  run_inference.py  train.py
deepmreye/: __init__.py  _version.py  analyse.py  architecture.py  config.py  preprocess.py  preprocess_clean.py  train.py
deepmreye/.ipynb_checkpoints/: architecture-checkpoint.py  train-checkpoint.py
deepmreye/data/: jepa_dataset.py  probe_dataset.py
deepmreye/evaluate/: probe.py
deepmreye/masks/: dme_template.nii  eyemask_big.nii  eyemask_small.nii
deepmreye/models/: inference.py  jepa.py  patcher.py
deepmreye/tests/: test_jepa.py
deepmreye/util/: __init__.py  data_generator.py  data_io.py  model_opts.py  util.py
docs/: .buildinfo  conf.py  deepmreye.rst  deepmreye.util.rst  index.rst  installation.md  modules.rst  objects.inv  searchindex.js  tests.rst
docs/.doctrees/: environment.pickle  index.doctree
media/: .~lock.deepmreye_logo.txt#  deepmreye_logo.txt
notebooks/: Makefile  deepmreye_benchmarks.ipynb  deepmreye_example_usage.ipynb  deepmreye_example_usage_pretrained_weights.ipynb  download_data_example_usage_pretrained_weights.sh  testnotebook.py
notebooks/Brain ROIs/: deepmreye_brain_rois.ipynb  rbl_preSMA_ok.nii  rpmEC_IP2mm.nii
scripts/: compile_openneuro.py  convert_labeled_to_h5.py  convert_weights.py  download_and_preprocess.py  evaluate_dataset.py  label_datasets.py  process_bids.py  train_classifier.py  train_combined.py  train_holdout.py  train_jepa.py
streamlit/: streamlit.py
tests/: conftest.py  deepmreye_tests.py  test_deepmreye.py  test_preprocessing.py
tests/data/: mask_test_participant.p  stim_vals.csv  test_participant.nii  test_participant.npz
tests/data/processed/: test_participant.npz
