[metadata]
name = deepmreye
version = 0.1.0
url = https://github.com/DeepMReye/DeepMReye
download_url = https://github.com/DeepMReye/DeepMReye
author = Markus Frey
maintainer = Markus Frey
maintainer_email = markus.frey1@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
license = LGPL-3.0
description = MR-based eye tracker without eye tracking
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    deepmreye

[options]
python_requires = >=3.6.1
install_requires =
    numpy
    pandas
    matplotlib
    scipy
    ipython
    plotly
    scikit-learn
    antspyx
    tensorflow <2.7
    jupyter
tests_require =
    pytest
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.package_data]
deepmreye = 
    *.p
    *.csv
    *.npz
    *.png
    *.txt
    tests/data/*

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
style =
    flake8 >=3.7
    flake8-docstrings >=1.5
test =
    pytest >=5.3
    pytest-cov
    %(doc)s
    %(style)s
all =
    %(doc)s
    %(style)s
    %(test)s

[flake8]
count = True
show-source = True
statistics = True
exclude=
    *build/
    media
    tests
select = E9,F63,F7,F82
max-complexity = 10
max-line-length = 127
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx
